documentation/modules/ROOT/examples/bgd-yaml/bgd-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: bgd
  name: bgd
  namespace: bgd
spec:
  port:
    targetPort: 8088
  to:
    kind: Service
    name: bgd
    weight: 100
